Add some details in home page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phoro</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="./css/styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Rajdhani|Unica+One&display=swap" rel="stylesheet">
   </head>
   <div class="navbar">
     <nav>
@@ -13,12 +14,14 @@
       <a href="product.html">PRODUCT</a>
       <a href="#contact">CONTACT</a>
       <a href="login.html" class="login" >LOGIN</a>
+      <a href="signup.html" class="signup" >SIGNUP</a>
     </nav>
   </div>
 <section id="home">
   <body>
  <div class="container">
  <div class="row">
+   <!-- <div class="spread1"> -->
     <div class="col-md-4">
       <img src="./images/image12.png" alt="camera.jpg">
     </div>
@@ -36,7 +39,8 @@
   </div>
   <div class="col-md-4">
     <img src="./images/image.png">
-  </div>
+    </div>
+  <!-- </div> -->
   </div>
  </div>
   </body>
@@ -46,7 +50,8 @@
     <h2>What we do</h2>
         <p>Our <strong>Phoros</strong> website helps to showcase and sell a variety of cameras which will then be available at our store.<br>
         Our users will also be able to book appointments with different photographers enrolled within the website.<br>
-      We also help to showcase our photographer's skills in order to help market themselves for various photoshoot appointments.<p></p>
+      We also help to showcase our photographer's skills in order to help market themselves for various photoshoot appointments.</p><br><br>
+    <h2>Meet Our Staff</h2>
   </body>
 </section>
 </html>
