--- a/login.html
+++ b/login.html
@@ -19,13 +19,12 @@
                   <label for="psw"><b>Password</b></label><br>
                   <input type="password" placeholder="Enter Password" name="psw" required><br>
               
-                  <button type="submit">login</button><br>
+                  <input type="submit" class="signupbtn" value="Login"></input><br>
                   <label>
                     <input type="checkbox" checked="checked" name="remember"> Remember me
                   </label>
                 </div>
-              
-                <div class="container" style="background-color:#f1f1f1">
+                <div class="container" style="background-color: transparent">
                   <button type="button" class="cancelbtn">Cancel</button>
                   <span class="psw">Forgot <a href="#">password?</a></span>
                 </div>
