--- a/product.html
+++ b/product.html
@@ -87,8 +87,8 @@
    </div>
    <h2>PHOTOSHOOTS</h2>
    <div class="container"> 
+     <div class="row">
   <div class="photo">
-    <div class="row">
      <div class="col-md-4">
        <img src="./images/photo1.jpeg" />
       </div>
@@ -97,9 +97,9 @@
      </div>
      <div class="col-md-4">
        <img src="./images/photo3.jpeg"/>
-     </div>
-   </div>
-   <div class="row">
+      </div>
+    </div>
+   <!-- <div class="row">
     <div class="col-md-4">
       <img src="./images/photo4.jpeg" />
     </div>
@@ -109,7 +109,7 @@
     <div class="col-md-4">
       <img src="./images/photo6.jpeg" />
     </div>
-  </div>
+  </div> -->
   <div class="row">
     <div class="col-md-4">
       <img src="./images/photo7.jpeg" />
@@ -129,8 +129,7 @@
     <div class="col-md-4">
       <img src="./images/photo12.jpeg" />
     </div>
-</div>
-</div>
-</div>
+   </div>
+  </div>
  </body>
 </html>
