--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <a href="#home">HOME</a>
       <a href="#about">ABOUT</a>
-      <a href="product.html">PRODUCT</a>
+      <a href="#product">PRODUCT</a>
       <a href="#contact">CONTACT</a>
       <a href="login.html" class="login" >LOGIN</a>
       <a href="signup.html" class="signup" >SIGNUP</a>
@@ -21,26 +21,24 @@
   <body>
  <div class="container">
  <div class="row">
-   <!-- <div class="spread1"> -->
-    <div class="col-md-4">
+    <div class="col-xs-4">
       <img src="./images/image12.png" alt="camera.jpg">
     </div>
-    <div class="col-md-4">
+    <div class="col-xs-4">
       <img src="./images/image11.png">
     </div>
-    <div class="col-md-4">
+    <div class="col-xs-4">
       <img src="./images/image13.png" alt="">
     </div>
-  <div class="col-md-4">
+  <div class="col-xs-4">
     <img src="./images/image1.jpeg">
   </div>
-  <div class="col-md-4">
+  <div class="col-xs-4">
     <img src="./images/image2.jpeg" alt="">
   </div>
-  <div class="col-md-4">
+  <div class="col-xs-4">
     <img src="./images/image.png">
     </div>
-  <!-- </div> -->
   </div>
  </div>
   </body>
@@ -52,6 +50,109 @@
         Our users will also be able to book appointments with different photographers enrolled within the website.<br>
       We also help to showcase our photographer's skills in order to help market themselves for various photoshoot appointments.</p><br><br>
     <h2>Meet Our Staff</h2>
+    <div class="row">
+      <div class="col-xs-3">
+        <img src="images/Vique.png" alt="Victor" width="30%"><br><h3>Victor</h3><p>Scrum Master</p>
+      </div>
+      <div class="col-xs-3">
+        <img src="images/Trevor.png" alt="Trevor" width="30%"><br><h3>Trevor</h3><p>Authentication</p>
+      </div>
+      <div class="col-xs-3">
+        <img src="images/rashid.png" alt="Rashid" width="50%"><br><h3>Rashid</h3><p>User Experience</p>
+      </div>
+      <div>
+        <img src="images/miriam.png" alt="Miriam"><br><h3>Miriam</h3><p>User Experience</p>
+      </div>
+      <div class="col-xs-3">
+        <img src="images/silviaa.png" alt="Silvia"><br><h3>Silvia</h3><p>User Interface</p>
+      </div>
+    </div>
+  </body>
+</section>
+<section id="products">
+  <body>
+    <center>
+      <h2>CAMERA MODELS</h2>
+      <div class="container"> 
+      <div class="row">
+        <div class="col-md-4">
+          <img src="./images/cam1.png" /><p>price</p><p>Kshs: 90,000</p>
+        </div>
+        <div class="col-md-4">
+          <img src="./images/cam2.png" /><p>price</p><p>Kshs:75,000</p>
+        </div>
+        <div class="col-md-4">
+          <img src="./images/cam3.png"/><p>price</p><p>Kshs:100,000</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <img src="./images/cam4.png" /><p>price</p><p>Kshs:150,000</p>
+        </div>
+        <div class="col-md-4">
+          <img src="./images/cam5.png" /><p>price</p><p>Kshs:85,000</p>
+        </div>
+        <div class="col-md-4">
+          <img src="./images/cam6.png" /><p>price</p><p>Kshs:105,000</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <img src="./images/cam7.png" /><p>price</p><p>Kshs:85,0000</p>
+        </div>
+        <div class="col-md-4">
+          <img src="./images/cam8.png" /><p>price</p><p>Kshs:100,000</p>
+        </div>
+        <div class="col-md-4">
+          <img src="./images/cam9.png" /><p>price</p><p>Kshs:65,000</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <img src="./images/cam10.png" /><p>price</p><p>Kshs:75,000</p>
+        </div>
+        <div class="col-md-4">
+          <img src="./images/cam11.png" /><p>price</p><p>Kshs:50,000</p>
+        </div>
+        <div class="col-md-4">
+          <img src="./images/cam12.png" /><p>price</p><p>Kshs:110,000</p>
+        </div>
+      </div>
+      </div>
+      <h2>PHOTOSHOOTS</h2>
+      <div class="container"> 
+        <div class="row">
+          <div class="col-md-4">
+            <img src="./images/photo1.jpeg" />
+          </div>
+          <div class="col-md-4">
+            <img src="./images/photo2.jpeg" />
+          </div>
+          <div class="col-md-4">
+            <img src="./images/photo3.jpeg"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <img src="./images/photo7.jpeg" />
+          </div>
+          <div class="col-md-4">
+            <img src="./images/photo8.jpeg" />
+          </div>
+          <div class="col-md-4">
+            <img src="./images/photo9.jpeg" />
+          </div>
+          <div class="col-md-4">
+            <img src="./images/photo10.jpeg" />
+          </div>
+          <div class="col-md-4">
+            <img src="./images/photo11.jpeg" />
+          </div>
+          <div class="col-md-4">
+            <img src="./images/photo12.jpeg" />
+          </div>
+        </div>
+      </div>
   </body>
 </section>
 </html>
