add products page to index.html

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
         <div class="login-form">
-            <form action="index.html" method="post">
+            <form action="index1.html" method="post">
                 <div class="container">
                   <p>Username:</p>
                   <input type="text" placeholder="Enter Username" name="uname" required>
