make final changes to index.html,index1.hml,reset.html and css/styles.css

--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phoro</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="./css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani|Unica+One&display=swap" rel="stylesheet">
   </head>
   <div class="navbar">
