--- a/reset.html
+++ b/reset.html
@@ -7,17 +7,16 @@
       <title>login</title>
       <link rel="stylesheet" href="css/styles.css">
       <link href="https://fonts.googleapis.com/css?family=Rajdhani|Unica+One&display=swap" rel="stylesheet">
-
+      <script src="js/jquery-3.4.1.js"></script>
   </head>
   <body>
-      <h2>Change Password</h2>
-  
-      <form... onsubmit="return checkForm(this);" action="login.html">
-        <p>Password: </p><input type="password" name="pwd1">
-        <p>Confirm Password: </p><input type="password" name="pwd2">
-        <p><input type="submit" value="Change Password" title="Change password" class="signupbtn"/></p>
-      
-      </form>  
+    <script type="text/javascript" src="js/scripts.js"></script>  
+    <h2>Change Password</h2>
+    <form... onsubmit="return checkForm(this);" action="login.html">  
+      <p>New Password: </p><input type="password" name="pwd1">
+      <p>Confirm Password: </p><input type="password" name="pwd2">
+      <p><input type="submit" value="Change Password" title="Change password" class="signupbtn"/></p>
+    </form>  
   </body>
  </html> 
   
