--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phoro</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="./css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+    <link href="./css/styles.css" rel="stylesheet" type="text/css" media="all">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani|Unica+One&display=swap" rel="stylesheet">
   </head>
   <div class="navbar">
