--- a/product.html
+++ b/product.html
@@ -3,8 +3,9 @@
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phoro</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/product.css" rel="stylesheet" type="text/css">
+    <link href="./css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="./css/product.css" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <nav>
         <a href="#home">HOME</a>
@@ -85,20 +86,20 @@
        <p>Kshs:110,000</p>
      </div>
    </div>
-   <h2>PHOTOSHOOTS</h2>
+   <div class="port" id="port">
+   <div id="port">
+   <h2 onmouseover="style.color='red'">PHOTOSHOOTS</h2>
+   </div>
    <div class="container"> 
      <div class="row">
   <div class="photo">
-     <div class="col-md-4">
-       <img src="./images/photo1.jpeg" />
-      </div>
-     <div class="col-md-4">
-       <img src="./images/photo2.jpeg" />
-     </div>
-     <div class="col-md-4">
-       <img src="./images/photo3.jpeg"/>
-      </div>
+     
+    <div class="col-md-4"><div class="phoro">  <p id="team" href="https://www.facebook.com/Urbanidealstudio/">Urban Studio </p><img src="./images/photo1.jpeg" class="jpg"></div></div>
+      
+     <div class="col-md-4"><div class="phoro1"><a  id="team1" href="https://www.facebook.com/Photography-320655521407472/">Photography</a><img src="./images/photo2.jpeg" class="jpg1" ></div></div>
+     <div class="col-md-4"><div class="phoro2"><a id="team2" href="https://www.instagram.com/dweng_fotography_afrika/?hl=en">Dweng</a><img src="./images/photo3.jpeg" class="jpg2"></div></div>
     </div>
+     </div>
    <!-- <div class="row">
     <div class="col-md-4">
       <img src="./images/photo4.jpeg" />
@@ -111,25 +112,15 @@
     </div>
   </div> -->
   <div class="row">
-    <div class="col-md-4">
-      <img src="./images/photo7.jpeg" />
-    </div>
-    <div class="col-md-4">
-      <img src="./images/photo8.jpeg" />
-    </div>
-    <div class="col-md-4">
-      <img src="./images/photo9.jpeg" />
-    </div>
-     <div class="col-md-4">
-      <img src="./images/photo10.jpeg" />
-    </div>
-    <div class="col-md-4">
-      <img src="./images/photo11.jpeg" />
-    </div>
-    <div class="col-md-4">
-      <img src="./images/photo12.jpeg" />
-    </div>
+    <div class="col-md-4"><div class="phoro3"><p ></p> <a id="team3" href="https://www.instagram.com/__mutemwa__/?hl=en">Mutemwa</a> <img src="./images/photo7.jpeg" class="jpg3"></div></div>
+    <div class="col-md-4"><div class="phoro4"><a id="team4" href="https://www.instagram.com/i.am_lizer/?hl=en">i.am_lizer</a><img src="./images/photo8.jpeg" class="jpg4"></div></div>
+    <div class="col-md-4"><div class="phoro5"><a id="team5" href="https://www.instagram.com/mike_x_tacy/?hl=en">Mike_x_tacy</a><img src="./images/photo9.jpeg" class="jpg5"> </div></div>
+     <div class="col-md-4"><div class="phoro6"><a id="team6" href="https://www.instagram.com/astrolense/?hl=en">astrolense</a><img src="./images/photo10.jpeg" class="jpg6"></div></div>
+    <div class="col-md-4"><div class="phoro7"><a id="team7" href="https://www.instagram.com/nyandwaro/?hl=en">Nyandwaro</a><img src="./images/photo11.jpeg" class="jpg7"></div></div>
+    <div class="col-md-4"><div class="phoro8"><a  id="team8" href="https://www.facebook.com/mozayphotography/">Mozay</a><img src="./images/photo12.jpeg" class="jpg8"></div></div>
    </div>
   </div>
+  </div>
+   <script src="./js/scripts.js"></script>
  </body>
 </html>
