changeform in index.html

--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
 </section>
 <section id="products">
   <body>
-    <center>
-      <h2>CAMERA MODELS</h2>
-      <div class="container"> 
+    <h2>CAMERA MODELS</h2>
+    <div class="container"> 
       <div class="row">
         <div class="col-md-4">
           <img src="./images/cam1.png" /><p>price</p><p>Kshs: 90,000</p>
@@ -158,12 +157,11 @@
 </section>
 <section id="contact">
   <body>
-    <center>
     <h2>Contact Form</h2>
 			<div class="container">
         <div class="row">
           <div class="col-xs-6">
-				  <form https://formsubmit.co/youngtalentyuko@gmail.comp"><font size="3">
+				  <form action="https://formsubmit.co/youngtalentyuko@gmail.com">
 				  <p>First Name:
 					<input type="text" id="fname" name="firstname" placeholder="Your name.."></p><br><br>
 					<p>Last Name</label><br>
@@ -222,7 +220,7 @@
 						<option value="Uganda">Uganda</option>
 						<option value="Zambia">Zambia</option>
 						<option value="Zimbabwe">Zimbabwe</option>
-					</select></font></p><br><br>
+					</select></p><br><br>
 					<p>Subject
 					<textarea id="subject" name="subject" placeholder="Write something.." style="height:300px; width:400px"></textarea><br></p>
 					<p><input type="submit" value="Submit" class="signupbtn"></p>
