--- a/index1.html
+++ b/index1.html
@@ -161,7 +161,7 @@
 			<div class="container">
         <div class="row">
           <div class="col-xs-6">
-				  <form https://formsubmit.co/youngtalentyuko@gmail.comp"><font size="3">
+				  <form action="https://formsubmit.co/youngtalentyuko@gmail.comp">
 				  <p>First Name:
 					<input type="text" id="fname" name="firstname" placeholder="Your name.."></p><br><br>
 					<p>Last Name</label><br>
@@ -220,7 +220,7 @@
 						<option value="Uganda">Uganda</option>
 						<option value="Zambia">Zambia</option>
 						<option value="Zimbabwe">Zimbabwe</option>
-					</select></font></p><br><br>
+					</select></p><br><br>
 					<p>Subject
 					<textarea id="subject" name="subject" placeholder="Write something.." style="height:300px; width:400px"></textarea><br></p>
 					<p><input type="submit" value="Submit" class="signupbtn"></p>
@@ -228,7 +228,6 @@
       </div>
     </div>
     </div>
-  </center>
   </body>
 </section>
 <footer>
