--- a/product.html
+++ b/product.html
@@ -94,23 +94,12 @@
      <div class="row">
   <div class="photo">
      
-    <div class="col-md-4"><div class="phoro">  <p id="team" href="https://www.facebook.com/Urbanidealstudio/">Urban Studio </p><img src="./images/photo1.jpeg" class="jpg"></div></div>
+    <div class="col-md-4"><div class="phoro">  <a id="team" href="https://www.facebook.com/Urbanidealstudio/">Urban Studio </a><img src="./images/photo1.jpeg" class="jpg"></div></div>
       
      <div class="col-md-4"><div class="phoro1"><a  id="team1" href="https://www.facebook.com/Photography-320655521407472/">Photography</a><img src="./images/photo2.jpeg" class="jpg1" ></div></div>
      <div class="col-md-4"><div class="phoro2"><a id="team2" href="https://www.instagram.com/dweng_fotography_afrika/?hl=en">Dweng</a><img src="./images/photo3.jpeg" class="jpg2"></div></div>
     </div>
      </div>
-   <!-- <div class="row">
-    <div class="col-md-4">
-      <img src="./images/photo4.jpeg" />
-    </div>
-    <div class="col-md-4">
-      <img src="./images/photo5.jpeg" />
-    </div>
-    <div class="col-md-4">
-      <img src="./images/photo6.jpeg" />
-    </div>
-  </div> -->
   <div class="row">
     <div class="col-md-4"><div class="phoro3"><p ></p> <a id="team3" href="https://www.instagram.com/__mutemwa__/?hl=en">Mutemwa</a> <img src="./images/photo7.jpeg" class="jpg3"></div></div>
     <div class="col-md-4"><div class="phoro4"><a id="team4" href="https://www.instagram.com/i.am_lizer/?hl=en">i.am_lizer</a><img src="./images/photo8.jpeg" class="jpg4"></div></div>
