create new changes

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 			<div class="container">
         <div class="row">
           <div class="col-xs-6">
+          <form action="https://formsubmit.co/youngtalentyuko@gmail.com" method="POST">
 				  <p>First Name:
 					<input type="text" id="fname" name="firstname" placeholder="Your name.."></p><br><br>
 					<p>Last Name</label><br>
