--- a/index1.html
+++ b/index1.html
@@ -120,48 +120,33 @@
       </div>
       <h2>PHOTOSHOOTS</h2>
       <div class="container"> 
-        <div class="row">
-          <div class="col-md-4">
-            <img src="./images/photo1.jpeg" />
+          <div class="row">
+       <div class="photo">
+          
+         <div class="col-md-4"><div class="phoro">  <a id="team" href="https://www.facebook.com/Urbanidealstudio/">Urban Studio </a><img src="./images/photo1.jpeg" class="jpg"></div></div>
+           
+          <div class="col-md-4"><div class="phoro1"><a  id="team1" href="https://www.facebook.com/Photography-320655521407472/">Photography</a><img src="./images/photo2.jpeg" class="jpg1" ></div></div>
+          <div class="col-md-4"><div class="phoro2"><a id="team2" href="https://www.instagram.com/dweng_fotography_afrika/?hl=en">Dweng</a><img src="./images/photo3.jpeg" class="jpg2"></div></div>
+         </div>
           </div>
-          <div class="col-md-4">
-            <img src="./images/photo2.jpeg" />
-          </div>
-          <div class="col-md-4">
-            <img src="./images/photo3.jpeg"/>
-          </div>
+       <div class="row">
+         <div class="col-md-4"><div class="phoro3"><p ></p> <a id="team3" href="https://www.instagram.com/__mutemwa__/?hl=en">Mutemwa</a> <img src="./images/photo7.jpeg" class="jpg3"></div></div>
+         <div class="col-md-4"><div class="phoro4"><a id="team4" href="https://www.instagram.com/i.am_lizer/?hl=en">i.am_lizer</a><img src="./images/photo8.jpeg" class="jpg4"></div></div>
+         <div class="col-md-4"><div class="phoro5"><a id="team5" href="https://www.instagram.com/mike_x_tacy/?hl=en">Mike_x_tacy</a><img src="./images/photo9.jpeg" class="jpg5"> </div></div>
+          <div class="col-md-4"><div class="phoro6"><a id="team6" href="https://www.instagram.com/astrolense/?hl=en">astrolense</a><img src="./images/photo10.jpeg" class="jpg6"></div></div>
+         <div class="col-md-4"><div class="phoro7"><a id="team7" href="https://www.instagram.com/nyandwaro/?hl=en">Nyandwaro</a><img src="./images/photo11.jpeg" class="jpg7"></div></div>
+         <div class="col-md-4"><div class="phoro8"><a  id="team8" href="https://www.facebook.com/mozayphotography/">Mozay</a><img src="./images/photo12.jpeg" class="jpg8"></div></div>
         </div>
-        <div class="row">
-          <div class="col-md-4">
-            <img src="./images/photo7.jpeg" />
-          </div>
-          <div class="col-md-4">
-            <img src="./images/photo8.jpeg" />
-          </div>
-          <div class="col-md-4">
-            <img src="./images/photo9.jpeg" />
-          </div>
-          <div class="col-md-4">
-            <img src="./images/photo10.jpeg" />
-          </div>
-          <div class="col-md-4">
-            <img src="./images/photo11.jpeg" />
-          </div>
-          <div class="col-md-4">
-            <img src="./images/photo12.jpeg" />
-          </div>
-        </div>
-      </div>
+       </div>
   </body>
 </section>
 <section id="contact">
   <body>
-    <center>
     <h2>Contact Form</h2>
 			<div class="container">
         <div class="row">
           <div class="col-xs-6">
-				  <form action="https://formsubmit.co/youngtalentyuko@gmail.comp">
+				  <form action="https://formsubmit.co/youngtalentyuko@gmail.com" method="POST">
 				  <p>First Name:
 					<input type="text" id="fname" name="firstname" placeholder="Your name.."></p><br><br>
 					<p>Last Name</label><br>
