create a new page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <a href="#home">HOME</a>
       <a href="#about">ABOUT</a>
-      <a href="#products">PRODUCT</a>
+      <a href="product.html">PRODUCT</a>
       <a href="#contact">CONTACT</a>
       <a href="login.html" class="login" >LOGIN</a>
       <a href="signup.html" class="signup" >SIGNUP</a>
@@ -90,77 +90,6 @@
         <img src="images/silviaa.png" alt="Silvia"><br><h3>Silvia</h3><p>User Interface</p>
       </div>
     </div>
-  </body>
-</section>
-<section id="products">
-  <body>
-    <h2>CAMERA MODELS</h2>
-    <div class="container"> 
-      <div class="row">
-        <div class="col-md-4">
-          <img src="./images/cam1.png" /><p>price</p><p>Kshs: 90,000</p>
-        </div>
-        <div class="col-md-4">
-          <img src="./images/cam2.png" /><p>price</p><p>Kshs:75,000</p>
-        </div>
-        <div class="col-md-4">
-          <img src="./images/cam3.png"/><p>price</p><p>Kshs:100,000</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <img src="./images/cam4.png" /><p>price</p><p>Kshs:150,000</p>
-        </div>
-        <div class="col-md-4">
-          <img src="./images/cam5.png" /><p>price</p><p>Kshs:85,000</p>
-        </div>
-        <div class="col-md-4">
-          <img src="./images/cam6.png" /><p>price</p><p>Kshs:105,000</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <img src="./images/cam7.png" /><p>price</p><p>Kshs:85,0000</p>
-        </div>
-        <div class="col-md-4">
-          <img src="./images/cam8.png" /><p>price</p><p>Kshs:100,000</p>
-        </div>
-        <div class="col-md-4">
-          <img src="./images/cam9.png" /><p>price</p><p>Kshs:65,000</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <img src="./images/cam10.png" /><p>price</p><p>Kshs:75,000</p>
-        </div>
-        <div class="col-md-4">
-          <img src="./images/cam11.png" /><p>price</p><p>Kshs:50,000</p>
-        </div>
-        <div class="col-md-4">
-          <img src="./images/cam12.png" /><p>price</p><p>Kshs:110,000</p>
-        </div>
-      </div>
-      </div>
-      <h2>PHOTOSHOOTS</h2>
-      <div class="container"> 
-          <div class="row">
-       <div class="photo">
-          
-         <div class="col-md-4"><div class="phoro">  <a id="team" href="https://www.facebook.com/Urbanidealstudio/">Urban Studio </a><img src="./images/photo1.jpeg" class="jpg"></div></div>
-           
-          <div class="col-md-4"><div class="phoro1"><a  id="team1" href="https://www.facebook.com/Photography-320655521407472/">Photography</a><img src="./images/photo2.jpeg" class="jpg1" ></div></div>
-          <div class="col-md-4"><div class="phoro2"><a id="team2" href="https://www.instagram.com/dweng_fotography_afrika/?hl=en">Dweng</a><img src="./images/photo3.jpeg" class="jpg2"></div></div>
-         </div>
-          </div>
-       <div class="row">
-         <div class="col-md-4"><div class="phoro3"><p ></p> <a id="team3" href="https://www.instagram.com/__mutemwa__/?hl=en">Mutemwa</a> <img src="./images/photo7.jpeg" class="jpg3"></div></div>
-         <div class="col-md-4"><div class="phoro4"><a id="team4" href="https://www.instagram.com/i.am_lizer/?hl=en">i.am_lizer</a><img src="./images/photo8.jpeg" class="jpg4"></div></div>
-         <div class="col-md-4"><div class="phoro5"><a id="team5" href="https://www.instagram.com/mike_x_tacy/?hl=en">Mike_x_tacy</a><img src="./images/photo9.jpeg" class="jpg5"> </div></div>
-          <div class="col-md-4"><div class="phoro6"><a id="team6" href="https://www.instagram.com/astrolense/?hl=en">astrolense</a><img src="./images/photo10.jpeg" class="jpg6"></div></div>
-         <div class="col-md-4"><div class="phoro7"><a id="team7" href="https://www.instagram.com/nyandwaro/?hl=en">Nyandwaro</a><img src="./images/photo11.jpeg" class="jpg7"></div></div>
-         <div class="col-md-4"><div class="phoro8"><a  id="team8" href="https://www.facebook.com/mozayphotography/">Mozay</a><img src="./images/photo12.jpeg" class="jpg8"></div></div>
-        </div>
-       </div>
   </body>
 </section>
 <section id="contact">
