--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 <section id="about"> 
   <body>
     <h2>What we do</h2>
-        <p>Our <strong>Phoros</strong> website helps to showcase and sell a variety of cameras which will then be available at our store.<br>
-        Our users will also be able to book appointments with different photographers enrolled within the website.<br>
-      We also help to showcase our photographer's skills in order to help market themselves for various photoshoot appointments.</p><br><br>
+        <p>Our <strong>Phoros</strong> Website will helps you out to sell or exibit varieties of cameras, & will later available on our store.<br>
+            users can book direct appointments with enrolled photographer's from this website.<br>
+      We can make photographer's able to market their photoshoot appointments by making "online exibitions" of their skills.</p><br><br>
     <h2>Meet Our Staff</h2>
     <div class="row">
       <div class="col-xs-3">
